[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
version = "0.1.0"
description = "A simple hello world package"
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = []

[tool.setuptools.packages.find]
include = ["hello*"]